added slides and minor improvements, also after the final presentations

--- a/documents/Include/gauss.tex
+++ b/documents/Include/gauss.tex
@@ -112,7 +112,7 @@
       \put(2461,877){\makebox(0,0)[l]{\strut{}Anderson algorithm}}%
     }%
     \gplbacktext
-    \put(0,0){\includegraphics{./Include/gauss}}%
+    \put(0,0){\includegraphics{gauss}}%
     \gplfronttext
   \end{picture}%
 \endgroup
