--- a/documents/Include/alternating.tex
+++ b/documents/Include/alternating.tex
@@ -84,6 +84,76 @@
     \setlength{\fboxrule}{0.5pt}%
     \setlength{\fboxsep}{1pt}%
 \begin{picture}(5668.00,2834.00)%
+    \gplgaddtomacro\gplfronttext{%
+      \csname LTb\endcsname%%
+      \put(264,2614){\makebox(0,0)[l]{\strut{}epslatex  terminal test}}%
+      \put(264,2339){\makebox(0,0)[l]{\strut{}gnuplot version 5.2.8  }}%
+      \csname LTb\endcsname%%
+      \settowidth{\gptboxwidth}{\widthof{12345678901234567890}}
+	\advance\gptboxwidth by 2\fboxsep
+      \savebox{\gptboxtext}{\parbox[c][\totalheight+2\fboxsep]{\gptboxwidth}{\centering{12345678901234567890}}}
+        \definecolor{tbcol}{rgb}{0.80,0.80,0.93}
+	\put(2834,1417){\makebox(0,0){\colorbox{tbcol}{\usebox{\gptboxtext}}}}
+      \csname LTb\endcsname%%
+      \put(2834,1747){\makebox(0,0){\strut{}true vs. estimated text dimensions}}%
+      \put(2834,2737){\makebox(0,0)[l]{\strut{}left justified}}%
+      \put(2834,2517){\makebox(0,0){\strut{}centre+d text}}%
+      \put(2834,2297){\makebox(0,0)[r]{\strut{}right justified}}%
+      \csname LT2\endcsname%%
+      \put(2702,2614){\makebox(0,0)[r]{\strut{}show ticscale}}%
+      \csname LTb\endcsname%%
+      \put(4681,2614){\makebox(0,0)[r]{\strut{}-1}}%
+      \csname LTa\endcsname%%
+      \put(4681,2394){\makebox(0,0)[r]{\strut{}0}}%
+      \colorrgb{0.58,0.00,0.83}%%
+      \put(4681,2174){\makebox(0,0)[r]{\strut{}1}}%
+      \colorrgb{0.00,0.62,0.45}%%
+      \put(4681,1954){\makebox(0,0)[r]{\strut{}2}}%
+      \colorrgb{0.34,0.71,0.91}%%
+      \put(4681,1734){\makebox(0,0)[r]{\strut{}3}}%
+      \colorrgb{0.90,0.62,0.00}%%
+      \put(4681,1514){\makebox(0,0)[r]{\strut{}4}}%
+      \colorrgb{0.94,0.89,0.26}%%
+      \put(4681,1294){\makebox(0,0)[r]{\strut{}5}}%
+      \colorrgb{0.00,0.45,0.70}%%
+      \put(4681,1074){\makebox(0,0)[r]{\strut{}6}}%
+      \colorrgb{0.90,0.12,0.06}%%
+      \put(4681,854){\makebox(0,0)[r]{\strut{}7}}%
+      \colorrgb{0.00,0.00,0.00}%%
+      \put(4681,634){\makebox(0,0)[r]{\strut{}8}}%
+      \colorrgb{0.58,0.00,0.83}%%
+      \put(4681,414){\makebox(0,0)[r]{\strut{}9}}%
+      \csname LT0\endcsname%%
+      \put(220,1417){\rotatebox{-270}{\makebox(0,0){\strut{}rotated ce+ntred text}}}%
+      \put(660,1417){\rotatebox{45}{\makebox(0,0)[l]{\strut{}  rotate by +45}}}%
+      \put(660,1417){\rotatebox{-45}{\makebox(0,0)[l]{\strut{}  rotate by -45}}}%
+      \csname LTb\endcsname%%
+      \put(991,113){\makebox(0,0)[l]{\strut{}  lw 1}}%
+      \put(991,226){\makebox(0,0)[l]{\strut{}  lw 2}}%
+      \put(991,339){\makebox(0,0)[l]{\strut{}  lw 3}}%
+      \put(991,452){\makebox(0,0)[l]{\strut{}  lw 4}}%
+      \put(991,565){\makebox(0,0)[l]{\strut{}  lw 5}}%
+      \put(991,678){\makebox(0,0)[l]{\strut{}  lw 6}}%
+      \put(425,791){\makebox(0,0)[l]{\strut{}linewidth}}%
+      \put(2266,113){\makebox(0,0)[l]{\strut{}  dt 1}}%
+      \put(2266,226){\makebox(0,0)[l]{\strut{}  dt 2}}%
+      \put(2266,339){\makebox(0,0)[l]{\strut{}  dt 3}}%
+      \put(2266,452){\makebox(0,0)[l]{\strut{}  dt 4}}%
+      \put(2266,565){\makebox(0,0)[l]{\strut{}  dt 5}}%
+      \put(1700,678){\makebox(0,0)[l]{\strut{}dashtype}}%
+      \put(3821,684){\makebox(0,0){\strut{}pattern fill}}%
+      \put(2904,464){\makebox(0,0){\strut{} 0}}%
+      \put(3115,464){\makebox(0,0){\strut{} 1}}%
+      \put(3326,464){\makebox(0,0){\strut{} 2}}%
+      \put(3537,464){\makebox(0,0){\strut{} 3}}%
+      \put(3748,464){\makebox(0,0){\strut{} 4}}%
+      \put(3959,464){\makebox(0,0){\strut{} 5}}%
+      \put(4170,464){\makebox(0,0){\strut{} 6}}%
+      \put(4381,464){\makebox(0,0){\strut{} 7}}%
+      \put(4592,464){\makebox(0,0){\strut{} 8}}%
+      \csname LTb\endcsname%%
+      \put(3967,2745){\makebox(0,0){\strut{}filled polygons:}}%
+    }%
     \gplgaddtomacro\gplbacktext{%
       \csname LTb\endcsname%%
       \put(1342,704){\makebox(0,0)[r]{\strut{}0.00005}}%
